--- a/anke2/anke_25_20.html
+++ b/anke2/anke_25_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート961~1000</div>
+                <div class="header-logo">アンケート481~500</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline happi_channel</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/happi_channel?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline happi_channel</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline taichirofujino</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/taichirofujino?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline taichirofujino</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline yamaryodesse</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/yamaryodesse?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline yamaryodesse</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline shomasatoswim</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/shomasatoswim?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline shomasatoswim</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline keita43a</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/keita43a?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline keita43a</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline gotanda_heroine</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/gotanda_heroine?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline gotanda_heroine</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline TenparistChan43</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/TenparistChan43?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline TenparistChan43</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline naoyamiyase</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/naoyamiyase?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline naoyamiyase</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline theodorewmiller</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/theodorewmiller?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline theodorewmiller</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline 8kotty8</h4>
+                        <h4>1番目のユーザーのTimeline 8kotty8</h4>
                         <a class="twitter-timeline" href="https://twitter.com/8kotty8?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline 8kotty8</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline 8kotty8</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline IwataTis</h4>
+                        <h4>2番目のユーザーのTimeline IwataTis</h4>
                         <a class="twitter-timeline" href="https://twitter.com/IwataTis?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline IwataTis</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline IwataTis</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline maimi0207</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/maimi0207?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline maimi0207</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline neko257778929</h4>
+                        <h4>3番目のユーザーのTimeline neko257778929</h4>
                         <a class="twitter-timeline" href="https://twitter.com/neko257778929?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline neko257778929</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline neko257778929</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline merokasan</h4>
+                        <h4>4番目のユーザーのTimeline merokasan</h4>
                         <a class="twitter-timeline" href="https://twitter.com/merokasan?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline merokasan</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline merokasan</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline chacolate03</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/chacolate03?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline chacolate03</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline mori_motoy</h4>
+                        <h4>5番目のユーザーのTimeline mori_motoy</h4>
                         <a class="twitter-timeline" href="https://twitter.com/mori_motoy?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline mori_motoy</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline mori_motoy</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline michikoenari</h4>
+                        <h4>6番目のユーザーのTimeline michikoenari</h4>
                         <a class="twitter-timeline" href="https://twitter.com/michikoenari?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline michikoenari</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline michikoenari</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline sangoukikuta</h4>
+                        <h4>7番目のユーザーのTimeline sangoukikuta</h4>
                         <a class="twitter-timeline" href="https://twitter.com/sangoukikuta?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline sangoukikuta</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline sangoukikuta</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline takeguchironcha</h4>
+                        <h4>8番目のユーザーのTimeline takeguchironcha</h4>
                         <a class="twitter-timeline" href="https://twitter.com/takeguchironcha?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline takeguchironcha</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline takeguchironcha</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline Angel_or_Devil6</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Angel_or_Devil6?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline Angel_or_Devil6</a>
+                        <h4>9番目のユーザーのTimeline Yamashita_1117</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Yamashita_1117?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline Yamashita_1117</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>10番目のユーザーのTimeline fuk_yamyam</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/fuk_yamyam?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline fuk_yamyam</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>11番目のユーザーのTimeline riki_okusa</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/riki_okusa?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline riki_okusa</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>12番目のユーザーのTimeline kami84807586</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/kami84807586?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline kami84807586</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>13番目のユーザーのTimeline masapm3</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/masapm3?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline masapm3</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>14番目のユーザーのTimeline 800lies_</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/800lies_?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline 800lies_</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>15番目のユーザーのTimeline hankenmeiao</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/hankenmeiao?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline hankenmeiao</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>16番目のユーザーのTimeline DJTANKO</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/DJTANKO?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline DJTANKO</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>17番目のユーザーのTimeline 3percent_of_me</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/3percent_of_me?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline 3percent_of_me</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>18番目のユーザーのTimeline youngyujiro</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/youngyujiro?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline youngyujiro</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>19番目のユーザーのTimeline Y_U_T_A_K_O_B_A</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Y_U_T_A_K_O_B_A?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline Y_U_T_A_K_O_B_A</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>20番目のユーザーのTimeline yu_satOd</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/yu_satOd?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline yu_satOd</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
