--- a/anke2/anke_30_20.html
+++ b/anke2/anke_30_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1161~1200</div>
+                <div class="header-logo">アンケート581~600</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline RyoTanihara</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/RyoTanihara?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline RyoTanihara</a>
+                        <h4>1番目のユーザーのTimeline mawaruyasuji</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/mawaruyasuji?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline mawaruyasuji</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline takadashibuya</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/takadashibuya?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline takadashibuya</a>
+                        <h4>2番目のユーザーのTimeline kazun_orchard</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/kazun_orchard?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline kazun_orchard</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline yudaitakahashi8</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/yudaitakahashi8?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline yudaitakahashi8</a>
+                        <h4>3番目のユーザーのTimeline sei_kou</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/sei_kou?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline sei_kou</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline arina_min_</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/arina_min_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline arina_min_</a>
+                        <h4>4番目のユーザーのTimeline akaumizaru</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/akaumizaru?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline akaumizaru</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline obcharada</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/obcharada?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline obcharada</a>
+                        <h4>5番目のユーザーのTimeline yucc07120v</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/yucc07120v?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline yucc07120v</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline suzukitaro1967</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/suzukitaro1967?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline suzukitaro1967</a>
+                        <h4>6番目のユーザーのTimeline metropolitantky</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/metropolitantky?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline metropolitantky</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline RevMax4</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/RevMax4?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline RevMax4</a>
+                        <h4>7番目のユーザーのTimeline Rise_o5</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Rise_o5?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline Rise_o5</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline ayumi__designer</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/ayumi__designer?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline ayumi__designer</a>
+                        <h4>8番目のユーザーのTimeline eimillv</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/eimillv?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline eimillv</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline official_goodby</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/official_goodby?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline official_goodby</a>
+                        <h4>9番目のユーザーのTimeline OtakopuChildren</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/OtakopuChildren?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline OtakopuChildren</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline clover88x</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/clover88x?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline clover88x</a>
+                        <h4>10番目のユーザーのTimeline Airee_airi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Airee_airi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline Airee_airi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline tetsuhiroikeda</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/tetsuhiroikeda?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline tetsuhiroikeda</a>
+                        <h4>11番目のユーザーのTimeline kinoucimasayosi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/kinoucimasayosi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline kinoucimasayosi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline OadProject</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/OadProject?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline OadProject</a>
+                        <h4>12番目のユーザーのTimeline pompomdaifuku</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/pompomdaifuku?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline pompomdaifuku</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline ryuji_startup</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/ryuji_startup?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline ryuji_startup</a>
+                        <h4>13番目のユーザーのTimeline tenteniy</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/tenteniy?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline tenteniy</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline shonen_yoshida</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/shonen_yoshida?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline shonen_yoshida</a>
+                        <h4>14番目のユーザーのTimeline Kawamitsu3o5</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Kawamitsu3o5?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline Kawamitsu3o5</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline t4k4from1196</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/t4k4from1196?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline t4k4from1196</a>
+                        <h4>15番目のユーザーのTimeline Rigsyrups</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Rigsyrups?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline Rigsyrups</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline YES_nagaman</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/YES_nagaman?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline YES_nagaman</a>
+                        <h4>16番目のユーザーのTimeline boyonboyonyama</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/boyonboyonyama?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline boyonboyonyama</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline hellohitty712</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/hellohitty712?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline hellohitty712</a>
+                        <h4>17番目のユーザーのTimeline tune_okami</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/tune_okami?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline tune_okami</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline _tosahi</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/_tosahi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline _tosahi</a>
+                        <h4>18番目のユーザーのTimeline nakadaamo420</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/nakadaamo420?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline nakadaamo420</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline mez0net</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/mez0net?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline mez0net</a>
+                        <h4>19番目のユーザーのTimeline kanonmetsugi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/kanonmetsugi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline kanonmetsugi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline ike_mot</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/ike_mot?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline ike_mot</a>
+                        <h4>20番目のユーザーのTimeline fu____dk</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/fu____dk?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline fu____dk</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
