--- a/anke2/anke_31_20.html
+++ b/anke2/anke_31_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1201~1240</div>
+                <div class="header-logo">アンケート601~620</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline mawaruyasuji</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/mawaruyasuji?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline mawaruyasuji</a>
+                        <h4>1番目のユーザーのTimeline UsmRisette0825</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/UsmRisette0825?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline UsmRisette0825</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline kazun_orchard</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kazun_orchard?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline kazun_orchard</a>
+                        <h4>2番目のユーザーのTimeline JunSuyama</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/JunSuyama?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline JunSuyama</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline sei_kou</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/sei_kou?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline sei_kou</a>
+                        <h4>3番目のユーザーのTimeline yvng_p4i</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/yvng_p4i?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline yvng_p4i</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline akaumizaru</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/akaumizaru?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline akaumizaru</a>
+                        <h4>4番目のユーザーのTimeline Masa45toshi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Masa45toshi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline Masa45toshi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline yucc07120v</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/yucc07120v?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline yucc07120v</a>
+                        <h4>5番目のユーザーのTimeline haruna_yurerula</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/haruna_yurerula?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline haruna_yurerula</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline metropolitantky</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/metropolitantky?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline metropolitantky</a>
+                        <h4>6番目のユーザーのTimeline takuro_chandan</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/takuro_chandan?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline takuro_chandan</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline Rise_o5</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Rise_o5?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline Rise_o5</a>
+                        <h4>7番目のユーザーのTimeline macoj5</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/macoj5?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline macoj5</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline eimillv</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/eimillv?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline eimillv</a>
+                        <h4>8番目のユーザーのTimeline nachiwow</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/nachiwow?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline nachiwow</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline OtakopuChildren</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/OtakopuChildren?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline OtakopuChildren</a>
+                        <h4>9番目のユーザーのTimeline msk_akane</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/msk_akane?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline msk_akane</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline Airee_airi</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Airee_airi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline Airee_airi</a>
+                        <h4>10番目のユーザーのTimeline haruka146</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/haruka146?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline haruka146</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline kinoucimasayosi</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kinoucimasayosi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline kinoucimasayosi</a>
+                        <h4>11番目のユーザーのTimeline XiG8o0</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/XiG8o0?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline XiG8o0</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline pompomdaifuku</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/pompomdaifuku?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline pompomdaifuku</a>
+                        <h4>12番目のユーザーのTimeline k_yonabal</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/k_yonabal?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline k_yonabal</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline tenteniy</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/tenteniy?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline tenteniy</a>
+                        <h4>13番目のユーザーのTimeline irikimomo</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/irikimomo?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline irikimomo</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline Kawamitsu3o5</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Kawamitsu3o5?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline Kawamitsu3o5</a>
+                        <h4>14番目のユーザーのTimeline haruyoshisan</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/haruyoshisan?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline haruyoshisan</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline Rigsyrups</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Rigsyrups?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline Rigsyrups</a>
+                        <h4>15番目のユーザーのTimeline rena_shogi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/rena_shogi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline rena_shogi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline boyonboyonyama</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/boyonboyonyama?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline boyonboyonyama</a>
+                        <h4>16番目のユーザーのTimeline full_bantyo_</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/full_bantyo_?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline full_bantyo_</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline tune_okami</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/tune_okami?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline tune_okami</a>
+                        <h4>17番目のユーザーのTimeline 8782872ya</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/8782872ya?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline 8782872ya</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline nakadaamo420</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/nakadaamo420?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline nakadaamo420</a>
+                        <h4>18番目のユーザーのTimeline ffyasuedaoisiii</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/ffyasuedaoisiii?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline ffyasuedaoisiii</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline kanonmetsugi</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kanonmetsugi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline kanonmetsugi</a>
+                        <h4>19番目のユーザーのTimeline Zhibigu</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Zhibigu?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline Zhibigu</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline fu____dk</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/fu____dk?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline fu____dk</a>
+                        <h4>20番目のユーザーのTimeline akkey7</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/akkey7?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline akkey7</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
