--- a/anke2/anke_33_20.html
+++ b/anke2/anke_33_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1281~1320</div>
+                <div class="header-logo">アンケート641~660</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline Zhibigu</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Zhibigu?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline Zhibigu</a>
+                        <h4>1番目のユーザーのTimeline O3Fbl</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/O3Fbl?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline O3Fbl</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline akkey7</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/akkey7?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline akkey7</a>
+                        <h4>2番目のユーザーのTimeline TommyDBD</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/TommyDBD?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline TommyDBD</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline waketter</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/waketter?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline waketter</a>
+                        <h4>3番目のユーザーのTimeline erisa_gunji</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/erisa_gunji?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline erisa_gunji</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline maesakoyasunari</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/maesakoyasunari?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline maesakoyasunari</a>
+                        <h4>4番目のユーザーのTimeline fujisawa44</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/fujisawa44?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline fujisawa44</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline nakajuuun</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/nakajuuun?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline nakajuuun</a>
+                        <h4>5番目のユーザーのTimeline pajama_toriya</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/pajama_toriya?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline pajama_toriya</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline loilo_age5</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/loilo_age5?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline loilo_age5</a>
+                        <h4>6番目のユーザーのTimeline marueisengyo</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/marueisengyo?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline marueisengyo</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline tairakeishou</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/tairakeishou?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline tairakeishou</a>
+                        <h4>7番目のユーザーのTimeline BredikhinaL</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/BredikhinaL?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline BredikhinaL</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline kinasawada8</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kinasawada8?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline kinasawada8</a>
+                        <h4>8番目のユーザーのTimeline sw_takahiro</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/sw_takahiro?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline sw_takahiro</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline asaik_ske</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/asaik_ske?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline asaik_ske</a>
+                        <h4>9番目のユーザーのTimeline takahiro_s_0527</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/takahiro_s_0527?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline takahiro_s_0527</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline taisho0912</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/taisho0912?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline taisho0912</a>
+                        <h4>10番目のユーザーのTimeline ODNK</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/ODNK?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline ODNK</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline SXLuAAiRgr49BPa</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/SXLuAAiRgr49BPa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline SXLuAAiRgr49BPa</a>
+                        <h4>11番目のユーザーのTimeline Risa_Ishibashi</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Risa_Ishibashi?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline Risa_Ishibashi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline miyamu1206</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/miyamu1206?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline miyamu1206</a>
+                        <h4>12番目のユーザーのTimeline kisuke_j6</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/kisuke_j6?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline kisuke_j6</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline meguminm0110</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/meguminm0110?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline meguminm0110</a>
+                        <h4>13番目のユーザーのTimeline jakutta</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/jakutta?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline jakutta</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline vivayoungkura</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/vivayoungkura?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline vivayoungkura</a>
+                        <h4>14番目のユーザーのTimeline yuan_sound</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/yuan_sound?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline yuan_sound</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline asamisawa</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/asamisawa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline asamisawa</a>
+                        <h4>15番目のユーザーのTimeline makotonishino</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/makotonishino?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline makotonishino</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline sayuriwatanabe_</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/sayuriwatanabe_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline sayuriwatanabe_</a>
+                        <h4>16番目のユーザーのTimeline tabialice</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/tabialice?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline tabialice</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline ajitamaa_aa</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/ajitamaa_aa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline ajitamaa_aa</a>
+                        <h4>17番目のユーザーのTimeline IchikaTachibana</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/IchikaTachibana?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline IchikaTachibana</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline kunyotsu</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kunyotsu?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline kunyotsu</a>
+                        <h4>18番目のユーザーのTimeline matsuiikanako</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/matsuiikanako?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline matsuiikanako</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline bravery_ray</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/bravery_ray?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline bravery_ray</a>
+                        <h4>19番目のユーザーのTimeline Miho_Fujiwara</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Miho_Fujiwara?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline Miho_Fujiwara</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline hanako_takaso</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/hanako_takaso?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline hanako_takaso</a>
+                        <h4>20番目のユーザーのTimeline hayasaki_yuna</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/hayasaki_yuna?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline hayasaki_yuna</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
