--- a/anke2/anke_1_20.html
+++ b/anke2/anke_1_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1~40</div>
+                <div class="header-logo">アンケート1~20</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline FsqTIk7LZD3ZGie</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/FsqTIk7LZD3ZGie?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline FsqTIk7LZD3ZGie</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline okomebroccoli</h4>
+                        <h4>1番目のユーザーのTimeline okomebroccoli</h4>
                         <a class="twitter-timeline" href="https://twitter.com/okomebroccoli?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline okomebroccoli</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline okomebroccoli</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline ME_Norika415</h4>
+                        <h4>2番目のユーザーのTimeline ME_Norika415</h4>
                         <a class="twitter-timeline" href="https://twitter.com/ME_Norika415?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline ME_Norika415</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline ME_Norika415</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline 96469646kuro</h4>
+                        <h4>3番目のユーザーのTimeline 96469646kuro</h4>
                         <a class="twitter-timeline" href="https://twitter.com/96469646kuro?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline 96469646kuro</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline 96469646kuro</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline aoyama22_miss3</h4>
+                        <h4>4番目のユーザーのTimeline aoyama22_miss3</h4>
                         <a class="twitter-timeline" href="https://twitter.com/aoyama22_miss3?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline aoyama22_miss3</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline aoyama22_miss3</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline isaokumakura</h4>
+                        <h4>5番目のユーザーのTimeline isaokumakura</h4>
                         <a class="twitter-timeline" href="https://twitter.com/isaokumakura?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline isaokumakura</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline isaokumakura</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline eda13a</h4>
+                        <h4>6番目のユーザーのTimeline eda13a</h4>
                         <a class="twitter-timeline" href="https://twitter.com/eda13a?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline eda13a</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline eda13a</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline harubassss</h4>
+                        <h4>7番目のユーザーのTimeline harubassss</h4>
                         <a class="twitter-timeline" href="https://twitter.com/harubassss?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline harubassss</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline harubassss</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline Mx1050tmtm</h4>
+                        <h4>8番目のユーザーのTimeline Mx1050tmtm</h4>
                         <a class="twitter-timeline" href="https://twitter.com/Mx1050tmtm?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline Mx1050tmtm</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline Mx1050tmtm</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline magana824</h4>
+                        <h4>9番目のユーザーのTimeline magana824</h4>
                         <a class="twitter-timeline" href="https://twitter.com/magana824?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline magana824</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline magana824</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline P7h8mnX5NETDZFU</h4>
+                        <h4>10番目のユーザーのTimeline P7h8mnX5NETDZFU</h4>
                         <a class="twitter-timeline" href="https://twitter.com/P7h8mnX5NETDZFU?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline P7h8mnX5NETDZFU</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline P7h8mnX5NETDZFU</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline sato_762</h4>
+                        <h4>11番目のユーザーのTimeline sato_762</h4>
                         <a class="twitter-timeline" href="https://twitter.com/sato_762?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline sato_762</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline sato_762</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline white_rabbit_00</h4>
+                        <h4>12番目のユーザーのTimeline white_rabbit_00</h4>
                         <a class="twitter-timeline" href="https://twitter.com/white_rabbit_00?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline white_rabbit_00</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline white_rabbit_00</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline maru_44</h4>
+                        <h4>13番目のユーザーのTimeline maru_44</h4>
                         <a class="twitter-timeline" href="https://twitter.com/maru_44?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline maru_44</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline maru_44</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline toshiyan222</h4>
+                        <h4>14番目のユーザーのTimeline toshiyan222</h4>
                         <a class="twitter-timeline" href="https://twitter.com/toshiyan222?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline toshiyan222</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline toshiyan222</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline oznaohiro</h4>
+                        <h4>15番目のユーザーのTimeline oznaohiro</h4>
                         <a class="twitter-timeline" href="https://twitter.com/oznaohiro?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline oznaohiro</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline oznaohiro</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline pococo99_</h4>
+                        <h4>16番目のユーザーのTimeline pococo99_</h4>
                         <a class="twitter-timeline" href="https://twitter.com/pococo99_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline pococo99_</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline pococo99_</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline tanoSEE_ceo</h4>
+                        <h4>17番目のユーザーのTimeline tanoSEE_ceo</h4>
                         <a class="twitter-timeline" href="https://twitter.com/tanoSEE_ceo?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline tanoSEE_ceo</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline tanoSEE_ceo</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline horikawa_go</h4>
+                        <h4>18番目のユーザーのTimeline horikawa_go</h4>
                         <a class="twitter-timeline" href="https://twitter.com/horikawa_go?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline horikawa_go</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline horikawa_go</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline yutamura0328</h4>
+                        <h4>19番目のユーザーのTimeline yutamura0328</h4>
                         <a class="twitter-timeline" href="https://twitter.com/yutamura0328?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline yutamura0328</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline yutamura0328</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>20番目のユーザーのTimeline MUSIQUA123</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/MUSIQUA123?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline MUSIQUA123</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
