--- a/anke2/anke_26_20.html
+++ b/anke2/anke_26_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1001~1040</div>
+                <div class="header-logo">アンケート501~520</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline Yamashita_1117</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Yamashita_1117?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline Yamashita_1117</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline fuk_yamyam</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/fuk_yamyam?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline fuk_yamyam</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline riki_okusa</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/riki_okusa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline riki_okusa</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline kami84807586</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/kami84807586?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline kami84807586</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline masapm3</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/masapm3?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline masapm3</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline HINOTORI320</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/HINOTORI320?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline HINOTORI320</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline 800lies_</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/800lies_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline 800lies_</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline hankenmeiao</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/hankenmeiao?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline hankenmeiao</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline DJTANKO</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/DJTANKO?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline DJTANKO</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline 3percent_of_me</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/3percent_of_me?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline 3percent_of_me</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline youngyujiro</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/youngyujiro?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline youngyujiro</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline Y_U_T_A_K_O_B_A</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/Y_U_T_A_K_O_B_A?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline Y_U_T_A_K_O_B_A</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline yu_satOd</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/yu_satOd?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline yu_satOd</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline makoto_act_</h4>
+                        <h4>1番目のユーザーのTimeline makoto_act_</h4>
                         <a class="twitter-timeline" href="https://twitter.com/makoto_act_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline makoto_act_</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline makoto_act_</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline niowmshinagawa</h4>
+                        <h4>2番目のユーザーのTimeline niowmshinagawa</h4>
                         <a class="twitter-timeline" href="https://twitter.com/niowmshinagawa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline niowmshinagawa</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline niowmshinagawa</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline oita_mami1104</h4>
+                        <h4>3番目のユーザーのTimeline oita_mami1104</h4>
                         <a class="twitter-timeline" href="https://twitter.com/oita_mami1104?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline oita_mami1104</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline oita_mami1104</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline fch1ka_nikkansp</h4>
+                        <h4>4番目のユーザーのTimeline fch1ka_nikkansp</h4>
                         <a class="twitter-timeline" href="https://twitter.com/fch1ka_nikkansp?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline fch1ka_nikkansp</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline fch1ka_nikkansp</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline takecopter01</h4>
+                        <h4>5番目のユーザーのTimeline takecopter01</h4>
                         <a class="twitter-timeline" href="https://twitter.com/takecopter01?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline takecopter01</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline takecopter01</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline ke_chan0722</h4>
+                        <h4>6番目のユーザーのTimeline ke_chan0722</h4>
                         <a class="twitter-timeline" href="https://twitter.com/ke_chan0722?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline ke_chan0722</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline ke_chan0722</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline yuosuka</h4>
+                        <h4>7番目のユーザーのTimeline yuosuka</h4>
                         <a class="twitter-timeline" href="https://twitter.com/yuosuka?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline yuosuka</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline yuosuka</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>8番目のユーザーのTimeline TakayukiMaekawa</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/TakayukiMaekawa?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline TakayukiMaekawa</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>9番目のユーザーのTimeline artmake_as74</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/artmake_as74?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline artmake_as74</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>10番目のユーザーのTimeline djushijima</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/djushijima?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline djushijima</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>11番目のユーザーのTimeline sohty986</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/sohty986?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline sohty986</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>12番目のユーザーのTimeline rui_senashiro</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/rui_senashiro?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline rui_senashiro</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>13番目のユーザーのTimeline Humping_A</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/Humping_A?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline Humping_A</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>14番目のユーザーのTimeline 0809bboyjoker</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/0809bboyjoker?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline 0809bboyjoker</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>15番目のユーザーのTimeline norinori_player</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/norinori_player?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline norinori_player</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>16番目のユーザーのTimeline runa_sunaga</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/runa_sunaga?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline runa_sunaga</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>17番目のユーザーのTimeline komachiange</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/komachiange?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline komachiange</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>18番目のユーザーのTimeline aube001</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/aube001?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline aube001</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>19番目のユーザーのTimeline hiro_ymb0526</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/hiro_ymb0526?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline hiro_ymb0526</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>20番目のユーザーのTimeline yokoyama_kazan</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/yokoyama_kazan?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline yokoyama_kazan</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
