--- a/anke2/anke_3_20.html
+++ b/anke2/anke_3_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート81~120</div>
+                <div class="header-logo">アンケート41~60</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline hnmn173</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/hnmn173?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline hnmn173</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline okumura538</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/okumura538?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline okumura538</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline chiho_no_hito</h4>
+                        <h4>1番目のユーザーのTimeline chiho_no_hito</h4>
                         <a class="twitter-timeline" href="https://twitter.com/chiho_no_hito?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline chiho_no_hito</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline chiho_no_hito</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline NagatsukaTakumi</h4>
+                        <h4>2番目のユーザーのTimeline NagatsukaTakumi</h4>
                         <a class="twitter-timeline" href="https://twitter.com/NagatsukaTakumi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline NagatsukaTakumi</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline NagatsukaTakumi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline koketiwawa</h4>
+                        <h4>3番目のユーザーのTimeline koketiwawa</h4>
                         <a class="twitter-timeline" href="https://twitter.com/koketiwawa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline koketiwawa</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline koketiwawa</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline misuzu_koita</h4>
+                        <h4>4番目のユーザーのTimeline misuzu_koita</h4>
                         <a class="twitter-timeline" href="https://twitter.com/misuzu_koita?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline misuzu_koita</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline misuzu_koita</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline namaichi</h4>
+                        <h4>5番目のユーザーのTimeline namaichi</h4>
                         <a class="twitter-timeline" href="https://twitter.com/namaichi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline namaichi</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline namaichi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline usagi_akabane</h4>
+                        <h4>6番目のユーザーのTimeline usagi_akabane</h4>
                         <a class="twitter-timeline" href="https://twitter.com/usagi_akabane?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline usagi_akabane</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline usagi_akabane</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline Ryo__Minamisawa</h4>
+                        <h4>7番目のユーザーのTimeline Ryo__Minamisawa</h4>
                         <a class="twitter-timeline" href="https://twitter.com/Ryo__Minamisawa?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline Ryo__Minamisawa</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline Ryo__Minamisawa</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline gudetm_ak</h4>
+                        <h4>8番目のユーザーのTimeline gudetm_ak</h4>
                         <a class="twitter-timeline" href="https://twitter.com/gudetm_ak?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline gudetm_ak</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline gudetm_ak</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline chignitta</h4>
+                        <h4>9番目のユーザーのTimeline chignitta</h4>
                         <a class="twitter-timeline" href="https://twitter.com/chignitta?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline chignitta</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline chignitta</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline mayudnc3</h4>
+                        <h4>10番目のユーザーのTimeline mayudnc3</h4>
                         <a class="twitter-timeline" href="https://twitter.com/mayudnc3?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline mayudnc3</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline mayudnc3</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline kimurayuri1128</h4>
+                        <h4>11番目のユーザーのTimeline kimurayuri1128</h4>
                         <a class="twitter-timeline" href="https://twitter.com/kimurayuri1128?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline kimurayuri1128</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline kimurayuri1128</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline not_fukuda</h4>
+                        <h4>12番目のユーザーのTimeline not_fukuda</h4>
                         <a class="twitter-timeline" href="https://twitter.com/not_fukuda?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline not_fukuda</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline not_fukuda</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline tokimitsu5223</h4>
+                        <h4>13番目のユーザーのTimeline tokimitsu5223</h4>
                         <a class="twitter-timeline" href="https://twitter.com/tokimitsu5223?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline tokimitsu5223</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline tokimitsu5223</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline 32_columbia</h4>
+                        <h4>14番目のユーザーのTimeline 32_columbia</h4>
                         <a class="twitter-timeline" href="https://twitter.com/32_columbia?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline 32_columbia</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline 32_columbia</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline taiki_e</h4>
+                        <h4>15番目のユーザーのTimeline taiki_e</h4>
                         <a class="twitter-timeline" href="https://twitter.com/taiki_e?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline taiki_e</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline taiki_e</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline rin4ngel</h4>
+                        <h4>16番目のユーザーのTimeline rin4ngel</h4>
                         <a class="twitter-timeline" href="https://twitter.com/rin4ngel?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline rin4ngel</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline rin4ngel</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline kajinoyome</h4>
+                        <h4>17番目のユーザーのTimeline kajinoyome</h4>
                         <a class="twitter-timeline" href="https://twitter.com/kajinoyome?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline kajinoyome</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline kajinoyome</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline minakichie</h4>
+                        <h4>18番目のユーザーのTimeline minakichie</h4>
                         <a class="twitter-timeline" href="https://twitter.com/minakichie?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline minakichie</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline minakichie</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>19番目のユーザーのTimeline ichirokitamura</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/ichirokitamura?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline ichirokitamura</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>20番目のユーザーのTimeline r_the_naka</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/r_the_naka?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline r_the_naka</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
