--- a/anke2/anke_6_20.html
+++ b/anke2/anke_6_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート201~240</div>
+                <div class="header-logo">アンケート101~120</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -45,8 +45,8 @@
                         <a href="./anke_31_20.html">アンケート601~620</a>
                         <a href="./anke_32_20.html">アンケート621~640</a>
                         <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~680</a>
-                        <a href="./anke_35_20.html">アンケート681~700</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
             </div>
@@ -68,85 +68,85 @@
 
                     <div class="contents-item2">
                        
-                        <h4>1番目のユーザーのTimeline yuki_liraizo</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/yuki_liraizo?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline yuki_liraizo</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>2番目のユーザーのTimeline fangreat_xm</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/fangreat_xm?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline fangreat_xm</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>3番目のユーザーのTimeline maskdorenisuru</h4>
-                        <a class="twitter-timeline" href="https://twitter.com/maskdorenisuru?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline maskdorenisuru</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>4番目のユーザーのTimeline liza_mars97</h4>
+                        <h4>1番目のユーザーのTimeline liza_mars97</h4>
                         <a class="twitter-timeline" href="https://twitter.com/liza_mars97?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline liza_mars97</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">1番目のユーザーのTimeline liza_mars97</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>5番目のユーザーのTimeline suzupi_85</h4>
+                        <h4>2番目のユーザーのTimeline suzupi_85</h4>
                         <a class="twitter-timeline" href="https://twitter.com/suzupi_85?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline suzupi_85</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">2番目のユーザーのTimeline suzupi_85</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>6番目のユーザーのTimeline itakurarara</h4>
+                        <h4>3番目のユーザーのTimeline itakurarara</h4>
                         <a class="twitter-timeline" href="https://twitter.com/itakurarara?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline itakurarara</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">3番目のユーザーのTimeline itakurarara</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>7番目のユーザーのTimeline maa1234KB</h4>
+                        <h4>4番目のユーザーのTimeline maa1234KB</h4>
                         <a class="twitter-timeline" href="https://twitter.com/maa1234KB?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline maa1234KB</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">4番目のユーザーのTimeline maa1234KB</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>8番目のユーザーのTimeline wutengyujie1</h4>
+                        <h4>5番目のユーザーのTimeline wutengyujie1</h4>
                         <a class="twitter-timeline" href="https://twitter.com/wutengyujie1?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline wutengyujie1</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">5番目のユーザーのTimeline wutengyujie1</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>9番目のユーザーのTimeline 3svy3VC</h4>
+                        <h4>6番目のユーザーのTimeline 3svy3VC</h4>
                         <a class="twitter-timeline" href="https://twitter.com/3svy3VC?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline 3svy3VC</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">6番目のユーザーのTimeline 3svy3VC</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>10番目のユーザーのTimeline ff78e43bbb5b482</h4>
+                        <h4>7番目のユーザーのTimeline ff78e43bbb5b482</h4>
                         <a class="twitter-timeline" href="https://twitter.com/ff78e43bbb5b482?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline ff78e43bbb5b482</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">7番目のユーザーのTimeline ff78e43bbb5b482</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>11番目のユーザーのTimeline Cobaiiin</h4>
+                        <h4>8番目のユーザーのTimeline Cobaiiin</h4>
                         <a class="twitter-timeline" href="https://twitter.com/Cobaiiin?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline Cobaiiin</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">8番目のユーザーのTimeline Cobaiiin</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>12番目のユーザーのTimeline yamauchi_naomi</h4>
+                        <h4>9番目のユーザーのTimeline yamauchi_naomi</h4>
                         <a class="twitter-timeline" href="https://twitter.com/yamauchi_naomi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline yamauchi_naomi</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">9番目のユーザーのTimeline yamauchi_naomi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>13番目のユーザーのTimeline AsukaJoooo</h4>
+                        <h4>10番目のユーザーのTimeline AsukaJoooo</h4>
                         <a class="twitter-timeline" href="https://twitter.com/AsukaJoooo?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline AsukaJoooo</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">10番目のユーザーのTimeline AsukaJoooo</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>14番目のユーザーのTimeline roas20</h4>
+                        <h4>11番目のユーザーのTimeline roas20</h4>
                         <a class="twitter-timeline" href="https://twitter.com/roas20?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline roas20</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">11番目のユーザーのTimeline roas20</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>15番目のユーザーのTimeline mukubayashi</h4>
+                        <h4>12番目のユーザーのTimeline mukubayashi</h4>
                         <a class="twitter-timeline" href="https://twitter.com/mukubayashi?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline mukubayashi</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">12番目のユーザーのTimeline mukubayashi</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>16番目のユーザーのTimeline LIGHT_OFFIZIELL</h4>
+                        <h4>13番目のユーザーのTimeline LIGHT_OFFIZIELL</h4>
                         <a class="twitter-timeline" href="https://twitter.com/LIGHT_OFFIZIELL?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline LIGHT_OFFIZIELL</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">13番目のユーザーのTimeline LIGHT_OFFIZIELL</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>17番目のユーザーのTimeline tatakakatot0</h4>
+                        <h4>14番目のユーザーのTimeline tatakakatot0</h4>
                         <a class="twitter-timeline" href="https://twitter.com/tatakakatot0?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline tatakakatot0</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">14番目のユーザーのTimeline tatakakatot0</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>18番目のユーザーのTimeline mika_d116</h4>
+                        <h4>15番目のユーザーのTimeline mika_d116</h4>
                         <a class="twitter-timeline" href="https://twitter.com/mika_d116?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline mika_d116</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">15番目のユーザーのTimeline mika_d116</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>19番目のユーザーのTimeline ryuseiiwata_</h4>
+                        <h4>16番目のユーザーのTimeline ryuseiiwata_</h4>
                         <a class="twitter-timeline" href="https://twitter.com/ryuseiiwata_?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline ryuseiiwata_</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">16番目のユーザーのTimeline ryuseiiwata_</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        <h4>20番目のユーザーのTimeline TakadaKenta_TK</h4>
+                        <h4>17番目のユーザーのTimeline TakadaKenta_TK</h4>
                         <a class="twitter-timeline" href="https://twitter.com/TakadaKenta_TK?ref_src=twsrc%5Etfw"
-                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline TakadaKenta_TK</a>
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">17番目のユーザーのTimeline TakadaKenta_TK</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>18番目のユーザーのTimeline abechannel16</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/abechannel16?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">18番目のユーザーのTimeline abechannel16</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>19番目のユーザーのTimeline mirai_ashn</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/mirai_ashn?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">19番目のユーザーのTimeline mirai_ashn</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <h4>20番目のユーザーのTimeline masakisatoh2015</h4>
+                        <a class="twitter-timeline" href="https://twitter.com/masakisatoh2015?ref_src=twsrc%5Etfw"
+                        width="640" height="537.44" frameborder="0" marginheight="0" marginwidth="0">20番目のユーザーのTimeline masakisatoh2015</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                     </div>
@@ -155,6 +155,45 @@
             </div>
             <div class="footer">
                 <div class="footer-logo">アンケート</div>
+                <div class="footer-list">
+                    <ul>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_26_20.html">アンケート501~520</a>
+                        <a href="./anke_27_20.html">アンケート521~540</a>
+                        <a href="./anke_28_20.html">アンケート541~560</a>
+                        <a href="./anke_29_20.html">アンケート561~580</a>
+                        <a href="./anke_30_20.html">アンケート581~600</a>
+                        <a href="./anke_31_20.html">アンケート601~620</a>
+                        <a href="./anke_32_20.html">アンケート621~640</a>
+                        <a href="./anke_33_20.html">アンケート641~660</a>
+                        <a href="./anke_34_20.html">アンケート661~676</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                    </ul>
+                </div>
 
             </div>
         </body>
